добавлена возможность получать функции sql
