# internal/handler/source.go
@@ -20,6 +20,7 @@ func newSourceHandler(app *fiber.App, ss *service.SourceService) {
 	g.Post("/", h.create)
 	g.Patch("/", h.edit)
 	g.Delete("/:id", h.delete)
+	g.Get("/:id/functions", h.getFunctions)
 }
 
 // @tags		источники
@@ -111,4 +112,16 @@ func (h *sourceHandler) getTables(ctx *fiber.Ctx) error {
 	}
 
 	return ctx.JSON(tables)
+}
+
+// @tags		источники
+// @param		id	path	string	true	"идентификатор источника"
+// @success	200	{array}	string
+// @router		/sources/{id}/functions [get]
+func (h *sourceHandler) getFunctions(ctx *fiber.Ctx) error {
+	functions, err := h.ss.GetFunctions(ctx.Params("id"))
+	if err != nil {
+		return err
+	}
+	return ctx.JSON(functions)
 }
